# glue-devtools

./: .dockerignore  .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  Makefile  README.md  cdk.context.json  cdk.json  docker-compose.yml  pyproject.toml  requirements.container.txt  requirements.txt  start.sh
.github/workflows/: ci.yml
cdk/: __main__.py
cdk/stacks/: sample.py
deploy/: __main__.py
deploy/stacks/: sample.py
docker/: Dockerfile  docker-compose.yml  jupyter-start.sh  requirements.txt
glue_utils/: context.py
glueetl/sample/: script.py
glueetl/sample/tests/: test_script.py
infrastructure/: __main__.py
infrastructure/constructs/: base.py
infrastructure/stacks/: sample.py
jobs/sample/: README.md  script.py
jobs/tests/sample/: test_script.py
notebooks/: sample.ipynb
notebooks/sample/: notebook.ipynb
requirements/: requirements.container.txt
src/sample/: README.md  script.py
test/glue_utils/: test_context.py
test/jobs/sample/: test_script.py
test/sample/: test_script.py
